--- a/WebApp/Views/Shared/Sections/Course/_AllCourses.cshtml
+++ b/WebApp/Views/Shared/Sections/Course/_AllCourses.cshtml
@@ -32,7 +32,8 @@
                 {
                     <div class="course-box">
                         <div class="image-and-best">
-                            <img class="main-image" src=@course.CoursePictureUrl />
+                            <img class="main-image" src=@course.CoursePictureUrl />                           
+                            <button class="bookmark" asp-controller="Course" asp-action="SaveCourse"><i class="fa-regular fa-bookmark"></i> </button>
                             @if (course.IsBestSeller == true)
                             {
                                 <article>
