--- a/WebApp/wwwroot/css/scss/_sections.scss
+++ b/WebApp/wwwroot/css/scss/_sections.scss
@@ -15,3 +15,4 @@
 @import './sections/_account-saved-items.scss';
 @import './sections/_contact.scss';
 @import './sections/_allCourses.scss';
+@import './sections/_unSubscribe.scss';
