--- a/WebApp/wwwroot/css/site.css
+++ b/WebApp/wwwroot/css/site.css
@@ -189,6 +189,13 @@ h6, .h6 {
   grid-template-rows: auto 1fr auto;
 }
 
+.dark-mode .wrapper {
+  height: 100vh;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  background-color: #0B0F19;
+}
+
 a {
   line-height: 160%;
   font-weight: 400;
@@ -4069,10 +4076,8 @@ footer .container .social-media a:hover {
   margin: 0;
   line-height: 0;
 }
-.dark-mode #courses .container .heading .search i {
-  position: absolute;
-  right: 16.5%;
-  top: 18%;
+.dark-mode #courses .container .heading .search button {
+  display: none;
 }
 .dark-mode #courses .container .course-grid .course-item {
   display: grid;
@@ -4100,6 +4105,7 @@ footer .container .social-media a:hover {
 }
 .dark-mode #courses .container .course-grid .course-item .course-box:hover {
   cursor: pointer;
+  box-shadow: 0px 8px 18px -8px rgba(99, 102, 241, 0.9);
 }
 .dark-mode #courses .container .course-grid .course-item .course-box .image-and-best {
   position: relative;
@@ -4198,4 +4204,207 @@ footer .container .social-media a:hover {
 .dark-mode #courses .container .course-grid .course-item .likes p {
   margin: 0;
   padding: 0;
+}
+
+#unsubscribe {
+  margin-top: 3rem;
+}
+#unsubscribe .container {
+  display: flex;
+  flex-direction: column;
+}
+#unsubscribe .container .unsubscribe-content .unsubscribe-form {
+  display: flex;
+  flex-direction: column;
+}
+#unsubscribe .container .unsubscribe-content .unsubscribe-form p {
+  font-weight: 700;
+}
+#unsubscribe .container .unsubscribe-content .unsubscribe-form #form-email {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  color: #0B0F19;
+  font-weight: 700;
+  position: relative;
+}
+#unsubscribe .container .unsubscribe-content .unsubscribe-form #form-email span.field-validation-error {
+  color: #EF4444;
+  font-weight: 500;
+  opacity: 0.7;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+#unsubscribe .container .unsubscribe-content .unsubscribe-form #form-email input {
+  border: 1px solid #D4D7E5;
+  padding: 0.4rem;
+  border-radius: 5px;
+}
+#unsubscribe .container .unsubscribe-content .unsubscribe-form #form-email input.input-validation-error {
+  border-color: #EF4444;
+}
+#unsubscribe .container .unsubscribe-content .unsubscribe-form #unsubscribe-box {
+  position: relative;
+  margin-top: 1rem;
+}
+#unsubscribe .container .unsubscribe-content .unsubscribe-form #unsubscribe-box label {
+  margin-left: 0.5rem;
+}
+#unsubscribe .container .unsubscribe-content .unsubscribe-form #unsubscribe-box span.field-validation-error {
+  color: #EF4444;
+  font-weight: 500;
+  opacity: 0.7;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+#unsubscribe .container .unsubscribe-content .unsubscribe-form #unsubscribe-box input {
+  border: 1px solid #D4D7E5;
+  padding: 0.4rem;
+  border-radius: 5px;
+}
+#unsubscribe .container .unsubscribe-content .unsubscribe-form #unsubscribe-box input.input-validation-error {
+  border-color: #EF4444;
+}
+#unsubscribe .container .unsubscribe-content .unsubscribe-form .buttons {
+  display: flex;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+#unsubscribe .container .unsubscribe-content .unsubscribe-form .buttons .btn-gray {
+  background-color: #EF4444;
+  color: #0B0F19;
+  font-weight: 700;
+  margin-right: 1rem;
+}
+#unsubscribe .container .unsubscribe-content .unsubscribe-form .buttons .btn-gray:hover {
+  background-color: #0B0F19;
+  color: #B4B7C9;
+}
+#unsubscribe .container .unsubscribe-content .unsubscribe-form .success {
+  background-color: lightgreen;
+  opacity: 0.8;
+  color: #0B0F19;
+  margin: 0;
+  max-width: 70%;
+  text-align: center;
+  font-weight: 700;
+  min-width: 30%;
+  min-height: 2rem;
+}
+#unsubscribe .container .unsubscribe-content .unsubscribe-form .alert {
+  background-color: rgba(239, 68, 68, 0.3215686275);
+  opacity: 0.8;
+  color: #0B0F19;
+  margin: 0;
+  max-width: 70%;
+  text-align: center;
+  font-weight: 700;
+}
+
+.dark-mode #unsubscribe {
+  margin-top: 3rem;
+}
+.dark-mode #unsubscribe .container {
+  display: flex;
+  flex-direction: column;
+}
+.dark-mode #unsubscribe .container h1 {
+  color: #E2E5F1;
+}
+.dark-mode #unsubscribe .container .unsubscribe-content .unsubscribe-form {
+  display: flex;
+  flex-direction: column;
+}
+.dark-mode #unsubscribe .container .unsubscribe-content .unsubscribe-form p {
+  font-weight: 700;
+  color: #B4B7C9;
+}
+.dark-mode #unsubscribe .container .unsubscribe-content .unsubscribe-form #form-email {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  color: #0B0F19;
+  font-weight: 700;
+  position: relative;
+}
+.dark-mode #unsubscribe .container .unsubscribe-content .unsubscribe-form #form-email span.field-validation-error {
+  color: #EF4444;
+  font-weight: 500;
+  opacity: 0.7;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.dark-mode #unsubscribe .container .unsubscribe-content .unsubscribe-form #form-email input {
+  border: 1px solid #D4D7E5;
+  padding: 0.4rem;
+  border-radius: 5px;
+}
+.dark-mode #unsubscribe .container .unsubscribe-content .unsubscribe-form #form-email input.input-validation-error {
+  border-color: #EF4444;
+}
+.dark-mode #unsubscribe .container .unsubscribe-content .unsubscribe-form #unsubscribe-box {
+  position: relative;
+  margin-top: 1rem;
+}
+.dark-mode #unsubscribe .container .unsubscribe-content .unsubscribe-form #unsubscribe-box label {
+  color: #B4B7C9;
+  margin-left: 0.5rem;
+}
+.dark-mode #unsubscribe .container .unsubscribe-content .unsubscribe-form #unsubscribe-box span.field-validation-error {
+  color: #EF4444;
+  font-weight: 500;
+  opacity: 0.7;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.dark-mode #unsubscribe .container .unsubscribe-content .unsubscribe-form #unsubscribe-box input {
+  border: 1px solid #D4D7E5;
+  padding: 0.4rem;
+  border-radius: 5px;
+}
+.dark-mode #unsubscribe .container .unsubscribe-content .unsubscribe-form #unsubscribe-box input.input-validation-error {
+  border-color: #EF4444;
+}
+.dark-mode #unsubscribe .container .unsubscribe-content .unsubscribe-form .buttons {
+  display: flex;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+.dark-mode #unsubscribe .container .unsubscribe-content .unsubscribe-form .buttons .btn-gray {
+  background-color: #EF4444;
+  color: #0B0F19;
+  font-weight: 700;
+  margin-right: 1rem;
+}
+.dark-mode #unsubscribe .container .unsubscribe-content .unsubscribe-form .buttons .btn-gray:hover {
+  background-color: #B4B7C9;
+  color: #0B0F19;
+}
+.dark-mode #unsubscribe .container .unsubscribe-content .unsubscribe-form .success {
+  display: flex;
+  background-color: lightgreen;
+  opacity: 0.8;
+  color: #0B0F19;
+  margin: 0;
+  max-width: 70%;
+  text-align: center;
+  font-weight: 700;
+  min-width: 30%;
+  min-height: 4rem;
+  border-radius: 0.3rem;
+  justify-content: center;
+  align-items: center;
+}
+.dark-mode #unsubscribe .container .unsubscribe-content .unsubscribe-form .alert {
+  background-color: rgba(239, 68, 68, 0.3215686275);
+  opacity: 0.8;
+  color: #B4B7C9;
+  margin: 0;
+  max-width: 70%;
+  text-align: center;
+  font-weight: 700;
 }
