Subscribe section workwithus

--- a/WebApp/wwwroot/css/scss/_sections.scss
+++ b/WebApp/wwwroot/css/scss/_sections.scss
@@ -16,3 +16,4 @@
 @import './sections/_contact.scss';
 @import './sections/_allCourses.scss';
 @import './sections/_unSubscribe.scss';
+@import './sections/_workWithUs.scss';
