--- a/WebApp/Views/Course/Index.cshtml
+++ b/WebApp/Views/Course/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@* CoursesPage *@
 
 <partial name="~/Views/Shared/Sections/Course/_AllCourses.cshtml" />
+<partial name="~/Views/Shared/Sections/Course/_WorkWithUs.cshtml" />
 
 
