--- a/WebApp/wwwroot/css/scss/sections/_allCourses.scss
+++ b/WebApp/wwwroot/css/scss/sections/_allCourses.scss
@@ -34,6 +34,9 @@
 
             .search {
 
+                button {
+                    display: none;
+                }
 
                 select {
                     padding: .5rem;
