--- a/WebApp/wwwroot/css/scss/sections/_subscribe.scss
+++ b/WebApp/wwwroot/css/scss/sections/_subscribe.scss
@@ -65,7 +65,7 @@
                         width: 100%;
                         margin-right: 1rem;
                         position: relative;
-                        margin-top:1rem;
+                        margin-top: 1rem;
 
                         i {
                             position: absolute;
@@ -112,12 +112,34 @@
                             margin: 0;
                             padding-top: .5rem;
                         }
+
+                        .success {
+                            background-color: lightgreen;
+                            opacity: 0.8;
+                            color: $gray-900;
+                            margin: 0;
+                            max-width: 70%;
+                            text-align: center;
+                            font-weight: 700;
+                            min-width: 30%;
+                            min-height: 2rem;
+                        }
+
+                        .alert {
+                            background-color: #ef444452;
+                            opacity: 0.8;
+                            color: $gray-900;
+                            margin: 0;
+                            max-width: 70%;
+                            text-align: center;
+                            font-weight: 700;
+                        }
                     }
 
 
                     button {
                         height: 2rem;
-                        margin-top:1rem;
+                        margin-top: 1rem;
                     }
                 }
             }
@@ -202,7 +224,7 @@
                             width: 100%;
                             margin-right: 1rem;
                             position: relative;
-                            margin-top:1rem;
+                            margin-top: 1rem;
 
                             i {
                                 position: absolute;
@@ -247,6 +269,32 @@
                                 margin: 0;
                                 padding-top: .5rem;
                                 color: $gray-500;
+                            }
+
+                            .success {
+                                display: flex;
+                                background-color: lightgreen;
+                                opacity: 0.8;
+                                color: $gray-900;
+                                margin: 0;
+                                max-width: 70%;
+                                text-align: center;
+                                font-weight: 700;
+                                min-width: 30%;
+                                min-height: 4rem;
+                                border-radius: .3rem;
+                                justify-content: center;
+                                align-items: center;
+                            }
+
+                            .alert {
+                                background-color: #ef444452;
+                                opacity: 0.8;
+                                color: $gray-500;
+                                margin: 0;
+                                max-width: 70%;
+                                text-align: center;
+                                font-weight: 700;
                             }
                         }
 
