--- a/WebApp/wwwroot/css/site.css
+++ b/WebApp/wwwroot/css/site.css
@@ -1523,6 +1523,26 @@ footer .container .social-media a:hover {
   margin: 0;
   padding-top: 0.5rem;
 }
+#subscribe .section-subscribe .container .newsletter .subscribe-form .input-terms .success {
+  background-color: lightgreen;
+  opacity: 0.8;
+  color: #0B0F19;
+  margin: 0;
+  max-width: 70%;
+  text-align: center;
+  font-weight: 700;
+  min-width: 30%;
+  min-height: 2rem;
+}
+#subscribe .section-subscribe .container .newsletter .subscribe-form .input-terms .alert {
+  background-color: rgba(239, 68, 68, 0.3215686275);
+  opacity: 0.8;
+  color: #0B0F19;
+  margin: 0;
+  max-width: 70%;
+  text-align: center;
+  font-weight: 700;
+}
 #subscribe .section-subscribe .container .newsletter .subscribe-form button {
   height: 2rem;
   margin-top: 1rem;
@@ -1624,6 +1644,30 @@ footer .container .social-media a:hover {
   margin: 0;
   padding-top: 0.5rem;
   color: #B4B7C9;
+}
+.dark-mode #subscribe .section-subscribe .container .newsletter .subscribe-form .input-terms .success {
+  display: flex;
+  background-color: lightgreen;
+  opacity: 0.8;
+  color: #0B0F19;
+  margin: 0;
+  max-width: 70%;
+  text-align: center;
+  font-weight: 700;
+  min-width: 30%;
+  min-height: 4rem;
+  border-radius: 0.3rem;
+  justify-content: center;
+  align-items: center;
+}
+.dark-mode #subscribe .section-subscribe .container .newsletter .subscribe-form .input-terms .alert {
+  background-color: rgba(239, 68, 68, 0.3215686275);
+  opacity: 0.8;
+  color: #B4B7C9;
+  margin: 0;
+  max-width: 70%;
+  text-align: center;
+  font-weight: 700;
 }
 .dark-mode #subscribe .section-subscribe .container .newsletter .subscribe-form button {
   height: 2rem;
@@ -3906,6 +3950,9 @@ footer .container .social-media a:hover {
   justify-content: space-between;
   align-items: baseline;
 }
+#courses .container .heading .search button {
+  display: none;
+}
 #courses .container .heading .search select {
   padding: 0.5rem;
 }
@@ -4407,4 +4454,149 @@ footer .container .social-media a:hover {
   max-width: 70%;
   text-align: center;
   font-weight: 700;
+}
+
+#work-with-us {
+  padding-bottom: 60px;
+}
+#work-with-us .container {
+  background: #F3F6FF;
+  display: block;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding-bottom: 60px;
+}
+@media (min-width: 992px) {
+  #work-with-us .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+#work-with-us .container .content-left {
+  padding: 40px 0 20px 120px;
+}
+@media (min-width: 992px) {
+  #work-with-us .container .content-left {
+    margin: 0;
+    padding: 40px 0 20px 100px;
+  }
+}
+#work-with-us .container .content-left p {
+  line-height: 160%;
+  font-weight: 400;
+  color: #565973;
+  font-family: "Manrope", sans-serif;
+  font-size: 24px !important;
+  color: #565973;
+}
+#work-with-us .container .content-left h1 {
+  line-height: 160%;
+  font-weight: 400;
+  color: #565973;
+  font-family: "Manrope", sans-serif;
+  font-weight: 800;
+  color: #0B0F19;
+  font-size: 28px !important;
+}
+@media (min-width: 768px) {
+  #work-with-us .container .content-left h1 {
+    line-height: 160%;
+    font-weight: 400;
+    color: #565973;
+    font-family: "Manrope", sans-serif;
+    font-weight: 800;
+    color: #0B0F19;
+    font-size: 40px !important;
+    width: 526px;
+  }
+}
+#work-with-us .container .content-left h1 span {
+  color: #6366F1;
+}
+#work-with-us .container .content-left a {
+  display: inline-block;
+}
+#work-with-us .container .content-right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 75px 0 30px 0;
+  width: 100%;
+  height: auto;
+}
+
+.dark-mode #work-with-us {
+  background-color: #0B0F19;
+  padding-bottom: 60px;
+}
+.dark-mode #work-with-us .container {
+  background-color: black;
+  display: block;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding-bottom: 60px;
+}
+@media (min-width: 992px) {
+  .dark-mode #work-with-us .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+.dark-mode #work-with-us .container .content-left {
+  padding: 40px 0 20px 120px;
+}
+@media (min-width: 992px) {
+  .dark-mode #work-with-us .container .content-left {
+    margin: 0;
+    padding: 40px 0 20px 100px;
+  }
+}
+.dark-mode #work-with-us .container .content-left p {
+  line-height: 160%;
+  font-weight: 400;
+  color: #565973;
+  font-family: "Manrope", sans-serif;
+  font-size: 24px !important;
+  color: #B4B7C9;
+}
+.dark-mode #work-with-us .container .content-left h1 {
+  line-height: 160%;
+  font-weight: 400;
+  color: #565973;
+  font-family: "Manrope", sans-serif;
+  font-weight: 800;
+  color: #0B0F19;
+  font-size: 28px !important;
+  color: #E2E5F1;
+}
+@media (min-width: 768px) {
+  .dark-mode #work-with-us .container .content-left h1 {
+    line-height: 160%;
+    font-weight: 400;
+    color: #565973;
+    font-family: "Manrope", sans-serif;
+    font-weight: 800;
+    color: #0B0F19;
+    font-size: 40px !important;
+    color: #E2E5F1;
+    width: 526px;
+  }
+}
+.dark-mode #work-with-us .container .content-left h1 span {
+  color: #6366F1;
+}
+.dark-mode #work-with-us .container .content-left a {
+  display: inline-block;
+}
+.dark-mode #work-with-us .container .content-right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 75px 0 30px 0;
+  width: 100%;
+  height: auto;
 }
