--- a/WebApp/Views/Shared/Sections/Home/_Contact.cshtml
+++ b/WebApp/Views/Shared/Sections/Home/_Contact.cshtml
@@ -38,7 +38,7 @@
 		</div>
 		<div class="right-side">
 			<div class="form-box">
-				<form class="contact-form" method="post" novalidate>
+				<form class="contact-form" method="post" novalidate asp-action="contact" asp-controller="Home">
 					<h3 class="h2">@Model.ContactForm.Title</h3>
 					<div id="form-fullname" class="form-group">
 						<label asp-for="ContactForm.FullName"></label>
